--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div id="main" class="text">
 			<h1>Rules</h1>
-			<p>You must catch the tringle before time it's over. You have 15 level, on each of them you have less, and less time, and the tringle moved faster. If you don't chatch the tringle, game started from the first.</p>
+			<p>You must catch the tringle before time it's over. You have 5 levels, on each of them you have less, and less time, and the tringle moved faster. If you don't chatch the tringle, game started from the first.</p>
 			<h2> Good luck!</h2>
 			<button type="button">Start!</button>
 			<p class="footer">© 2017 Kamila Kosmowska</p>
